@@ -126,7 +126,7 @@ class version_info(NamedTuple):
 
 
 __version_info__ = version_info(3, 0, 7, "final", 0)
-__version_time__ = "15 Dec 2021 05:56 UTC"
+__version_time__ = "18 Dec 2021 23:16 UTC"
 __version__ = __version_info__.__version__
 __versionTime__ = __version_time__
 __author__ = "Paul McGuire <ptmcg.gm+pyparsing@gmail.com>"
